# resource

./: README.md  sq.jp.uml  sq.uml
data/: diagram.fig
demo/MathLib/: CMakeLists.txt  readme.md
demo/MathLib/src/: MathLib.cpp
demo/hellowz/: CMakeLists.txt  readme.md
demo/hellowz/src/: main.cpp
task/: task.MD
